@@ -1,33 +1,25 @@
-# ----------- Step 1: Build the application using Maven ----------- #
+# Stage 1: Build
 FROM maven:3.9.6-eclipse-temurin-21 AS builder
 
 WORKDIR /app
 
-# Cache dependencies
-COPY pom.xml mvnw ./
-COPY .mvn .mvn
-RUN mvn dependency:go-offline -B
-
 # Copy source code
-COPY src ./src
+COPY . .
 
-# Build project
-RUN mvn clean package -DskipTests
+# Compile and package while allowing access to internal APIs
+RUN mvn clean package -DskipTests \
+    -Dmaven.compiler.release=21 \
+    -Dmaven.compiler.showDeprecation=true \
+    -Dmaven.compiler.forceJavacCompilerUse=true \
+    -Dmaven.compiler.compilerArgs="--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
 
-# ----------- Step 2: Create a lightweight production image ----------- #
-FROM eclipse-temurin:21-jdk
+# Stage 2: Run
+FROM eclipse-temurin:21-jdk-jammy
 
 WORKDIR /app
 
+# Copy built jar from previous stage
 COPY --from=builder /app/target/vehiclehub-0.0.1-SNAPSHOT.jar app.jar
 
-EXPOSE 8080
-
-ENV JAVA_OPTS="-XX:+UseContainerSupport \
-               -XX:MaxRAMPercentage=75.0 \
-               -XX:InitialRAMPercentage=50.0 \
-               -XX:+HeapDumpOnOutOfMemoryError \
-               -XX:HeapDumpPath=/tmp \
-               -XX:+UseG1GC"
-
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+# Run the Spring Boot app
+ENTRYPOINT ["java", "-jar", "app.jar"]
